--- a/index.html
+++ b/index.html
@@ -447,14 +447,14 @@
               <div id="headingOne">
                 <h2 class="panel-title"><a href="javascript:void(0);" class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">Why is my hair falling so much?</a></h2></div>
               <div id="collapseFour" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="panel-body para-faq">Hair loss can have various reasons, including genetics, hormonal changes, stress, and certain underlying medical conditions. If you're experiencing significant hair loss, it's best to consult a hair specialist near you for treatment options. Following an in-depth consultation with our Hair Specialists, a personalized hair fall treatment is crafted to address your specific needs, ensuring tailored care and effective results at Dr&nbsp;Batra's<sup>®</sup>.</div>
+                <div class="panel-body para-faq">Hair loss can have various reasons, including genetics, hormonal changes, stress, and certain underlying medical conditions. If you're experiencing significant hair loss, it's best to consult a hair specialist near you for treatment options. Following an in-depth consultation with our hair specialists, a personalized hair fall treatment is crafted to address your specific needs, ensuring tailored care and effective results at Dr&nbsp;Batra's<sup>®</sup>.</div>
               </div>
             </div>
             <div class="faq-box-cls">
               <div id="headingOne">
                 <h2 class="panel-title"><a href="javascript:void(0);" class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">Which treatment is best for <br class="d-block d-md-none">hair fall control?</a></h2></div>
               <div id="collapseFive" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="panel-body para-faq">When it comes to controlling hair fall, Dr&nbsp;Batra's<sup>®</sup> offers personalized treatments tailored to your needs. With a success rate of 96.6% and over 1.5 million happy patients, we specialize in holistic hair regrowth treatments, including homeopathy and advanced aesthetic treatments. Visit our clinic to find the most suitable hair treatment recommended by our specialists.</div>
+                <div class="panel-body para-faq">When it comes to controlling hair fall, Dr&nbsp;Batra's<sup>®</sup> offers personalized treatments tailored to your needs. With a success rate of 96.6% and over 1.5 million happy patients, we specialize in holistic hair regrowth treatments, including homeopathy and advanced aesthetic treatments. Visit our clinic to find the most suitable hair treatment recommended by our hair doctors.</div>
               </div>
             </div>
             <!-- old que -->
